# PongClone

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BUILD_ANDROID.md  BUILD_DESKTOP.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_ACTIONS.md  LICENSE  LICENSE_RU  NOTES.md  README.md  TODO.md  buildozer.spec  check_integration.py  pyproject.toml  pytest.ini  requirements-dev.txt  run_game.bat  run_game.sh
.claude/: settings.local.json
.github/workflows/: android.yml  desktop.yml  test.yml
PyPong/: __init__.py  audio.py  config.py  effects.py  entities.py  game_state.py  gamepad.py  main.py  mobile.py  platform_test.py  pong.py  pong.spec  pong_enhanced.py  pong_v2.py  pong_v3.py  pong_v4.py  requirements.txt  settings.py  stats.py  themes.py  tournament.py  ui.py
PyPong/archive/: pong_enhanced.py  pong_v3.py  pong_v4.py
PyPong/content/: __init__.py  campaign.py  challenges.py  minigames.py  modifiers.py  tournament.py
PyPong/core/: __init__.py  config.py  config_extended.py  constants.py  entities.py  entities_optimized.py  entity_pools.py  env_config.py  event_bus.py  game_state.py  logger.py  object_pool.py  profiler.py
PyPong/data/: achievements.json  campaign_progress.json  challenges.json  customization.json  settings.json  stats.json
PyPong/game/: __init__.py  collision_manager.py  game_loop.py  input_handler.py
PyPong/games/: __init__.py  arcade.py  base.py  classic.py  engine.py  menu_engine.py  multiplayer.py  test_modes.py
PyPong/locales/: en.json  ru.json
PyPong/mobile/: __init__.py  android_optimizations.py  responsive_ui.py  touch_controls.py
PyPong/rendering/: __init__.py  optimized_renderer.py  renderer.py
PyPong/systems/: __init__.py  achievements.py  arenas.py  audio.py  enhanced_ai.py  enhanced_powerups.py  leaderboard.py  leaderboard_online.py  replay_enhanced.py  replay_system.py  settings.py  stats.py
PyPong/systems/ai/: __init__.py  test_ai.py
PyPong/systems/multiplayer/: __init__.py
PyPong/tests/: README.md  conftest.py  run_benchmark.py  test_all_features.py  test_collision_manager.py  test_config.py  test_content.py  test_entities.py  test_entities_extended.py  test_entity_pools.py  test_env_config.py  test_event_bus.py  test_fps_benchmark.py  test_game_state.py  test_integration.py  test_object_pool.py  test_optimized_effects.py  test_profiler.py
PyPong/ui/: __init__.py  accessibility.py  content_ui.py  customization.py  effects.py  effects_optimized.py  enhanced_ui.py  localization.py  menu.py  onboarding.py  sound_themes.py  themes.py  transitions.py  tutorial.py  ui.py
docs/: API_DOCUMENTATION.md  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  RELEASE_CHECKLIST.md  SETUP_DEVELOPMENT.md
test_ai/: AI_CLI_MANUAL.md  duckduckgo-ai.py  gigachat-cli.py
